--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
+    "react-datepicker": "^2.5.0",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
