--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ppm?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Bismillah
 
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
