--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -17,6 +17,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+../**/.DS_Store
+../backend/**/*.class
 
 npm-debug.log*
 yarn-debug.log*
